# serializer version: 1
# name: test_all_entities[button.ampio_module_0xcb8f_bell-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.ampio_module_0xcb8f_bell',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bell',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bell',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bell',
    'unique_id': '47846_obj_149',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.ampio_module_0xcb8f_bell-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ampio module 0xCB8F Bell',
    }),
    'context': <ANY>,
    'entity_id': 'button.ampio_module_0xcb8f_bell',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.ampio_module_0xcb8f_dzwonek-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.ampio_module_0xcb8f_dzwonek',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dzwonek',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dzwonek',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bell',
    'unique_id': '47846_obj_150',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.ampio_module_0xcb8f_dzwonek-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ampio module 0xCB8F Dzwonek',
    }),
    'context': <ANY>,
    'entity_id': 'button.ampio_module_0xcb8f_dzwonek',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.ampio_module_0xcb8f_dzwonek_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.ampio_module_0xcb8f_dzwonek_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dzwonek',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dzwonek',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bell',
    'unique_id': '47846_obj_151',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.ampio_module_0xcb8f_dzwonek_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ampio module 0xCB8F Dzwonek',
    }),
    'context': <ANY>,
    'entity_id': 'button.ampio_module_0xcb8f_dzwonek_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
